<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear"
    android:orientation="vertical"

    >

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:text="Choose a city and start exploring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="40dp"
            android:paddingRight="60dp"
            android:paddingLeft="60dp"
            android:paddingBottom="30dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/light_black"
            />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trip_recyclerview"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
        <android.support.v7.widget.CardView
            android:id="@+id/dhaka_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/division_dhaka"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:layout_height="150dp" />
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:text="@string/dhaka"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="22sp"
                        android:textColor="@color/light_black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/dhaka_quo"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/chittagong_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/division_chittagong"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:layout_height="150dp" />
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:text="@string/chittagong"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="22sp"
                        android:textColor="@color/light_black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/chittagong_quo"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/khulna_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/division_khulna"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:layout_height="150dp" />
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:text="@string/khulna"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="22sp"
                        android:textColor="@color/light_black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/khulna_quo"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/barisal_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/division_barisal"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:layout_height="150dp" />
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:text="@string/barisal"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="22sp"
                        android:textColor="@color/light_black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/barisal_quo"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/mymensingh_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/division_mymensingh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:layout_height="150dp" />
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:text="@string/mymensingh"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="22sp"
                        android:textColor="@color/light_black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/mymensingh_quo"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/sylhet_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/division_sylhet"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:layout_height="150dp" />
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:text="@string/sylhet"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="22sp"
                        android:textColor="@color/light_black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/sylhet_quo"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/rajshahi_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/division_rajshahi"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:layout_height="150dp" />
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:text="@string/rajshahi"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="22sp"
                        android:textColor="@color/light_black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/rajshahi_quo"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trip_recyclerview"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />


        <android.support.v7.widget.CardView
            android:id="@+id/rangpur_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/division_rangpur" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/rangpur"
                        android:textAlignment="center"
                        android:textColor="@color/light_black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/rangpur_quo"
                        android:textAlignment="center"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>


</ScrollView>



</LinearLayout>